# ArrayMorph

./: .gitignore  README.md
arraymorph/: CMakeLists.txt
arraymorph/src/: CMakeLists.txt  constants.cc  constants.h  logger.h  operators.cc  operators.h  profiler.cc  profiler.h  query_processor.cc  query_processor.h  s3vl_chunk_obj.cc  s3vl_chunk_obj.h  s3vl_dataset_callbacks.cc  s3vl_dataset_callbacks.h  s3vl_dataset_obj.cc  s3vl_dataset_obj.h  s3vl_file_callbacks.cc  s3vl_file_callbacks.h  s3vl_group_callbacks.cc  s3vl_group_callbacks.h  s3vl_initialize.h  s3vl_vol_connector.cc  s3vl_vol_connector.h  storage_planner.cc  storage_planner.h  utils.cc  utils.h
examples/c++/: read.cc  write.cc
examples/python/: read.py  write.py
exp/20220318-concurrency-level/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20220318-concurrency-level/script/: randomization.py  write.sh
exp/20220318-concurrency-level/src/: write.cc
exp/20220426-end-to-end/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20220426-end-to-end/script/: randomization.py  write.sh
exp/20220426-end-to-end/src/: read.cc
exp/20220525-client-logs/results/: 4096.csv  cdf.r  default_executor.csv  interval.r  out-new.txt  out.txt  poolexecutor.csv  process.py  process_new.py  server_logs.csv
exp/20220525-client-logs/script/: randomization.py  read.sh
exp/20220525-client-logs/src/: read.cc
exp/20220531-end-to-end/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20220531-end-to-end/script/: randomization.py
exp/20220531-end-to-end/src/: read.cc  write.cc
exp/20220613-new-start-points/results/: log.txt  out.csv  out1.ods  output.txt  process.py
exp/20220613-new-start-points/script/: randomization.py  read.sh
exp/20220613-new-start-points/src/: read.cc
exp/20220622-number-of-requests/results/: log.txt  out.csv  output.txt  process.py
exp/20220622-number-of-requests/script/: randomization.py
exp/20220629-get-vs-multi-fetch/results/: log.txt  out.csv  out2.ods  output.txt  process.py
exp/20220629-get-vs-multi-fetch/script/: rand.py  randomization.py  read.sh
exp/20220629-get-vs-multi-fetch/src/: read.cc
exp/20220717-lambda/results/: log.txt  out.csv  out.ods  out1.csv  out1.txt  output.txt  process.py
exp/20220717-lambda/script/: randomization.py
exp/20220717-lambda/src/: read.cc
exp/20220721-lambda-vs-get/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20220721-lambda-vs-get/script/: randomization.py  write.sh
exp/20220721-lambda-vs-get/src/: read.cc
exp/20220726-lambda-vs-get-vary-chunksize/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20220726-lambda-vs-get-vary-chunksize/script/: randomization.py
exp/20220726-lambda-vs-get-vary-chunksize/src/: read.cc
exp/20220729-lambda-vs-get-fullcover/: exp.ods
exp/20220729-lambda-vs-get-fullcover/results/: log.txt  out.csv  out.ods  output.txt  plot.R  process.py
exp/20220729-lambda-vs-get-fullcover/src/: write.cc
exp/20220801-multi-fetch-merge/: process.py
exp/20220801-multi-fetch-merge/results/: log-q1.txt  log-q2.txt  out-q1.csv  out-q1.txt  out-q2.csv  out-q2.txt  plot.R  process.py
exp/20220823-tiledb-kita-results/results/: interval.r  out-q1.csv  out-q2.csv  plot.R  timeline.csv
exp/20220829-new-q/results/: log-1.txt  out-1.csv  out-1.txt  plot.R  process.py
exp/20220902-6MB-query/results/: log.txt  out.csv  output.txt  plot.R  process.py
exp/20220907-lambda-billed-time-estimation/results/: log.txt  out.csv  output.txt  plot.R  process.py  query.py
exp/20220907-lambda-billed-time-estimation/script/: randomization.py
exp/20220907-lambda-billed-time-estimation/src/: read.cc  write.cc
exp/20220913-lambda-overhead/results/: log.txt  out.csv  out.ods  output.txt  process.py  query.py
exp/20220913-lambda-overhead/script/: randomization.py
exp/20220913-lambda-overhead/src/: read.cc
exp/20220913-lambda-time-vary-size/results/: log.txt  logs.csv  out.csv  out.ods  output.txt  process.py  process_log.py
exp/20220913-lambda-time-vary-size/script/: randomization.py  read.sh
exp/20220913-lambda-time-vary-size/src/: read.cc
exp/20220919-lambda/results/: log.txt  model.R  out.csv  out.ods  output.txt  process.py  trained_data.csv
exp/20220919-lambda/script/: randomization.py  test.sh  write.sh
exp/20220919-lambda/src/: read.cc  write.cc
exp/20221021-bert/dataloader/: hsds.py  tdb-test.py  tiledb.py
exp/20221021-bert/results/: log.txt  out.csv  out.ods  out.txt  plot.R  plot_data.csv  process.py
exp/20221021-bert/src/: hsds.py  read.cc  tiledb.py
exp/20221021-bert/workload/: generate.py
exp/20230106-multi-cloud/results/: cloud-services.ods  log.txt  out.csv  out.ods  output.txt  process.py
exp/20230106-multi-cloud/script/: randomization.py  write.sh
exp/20230106-multi-cloud/src/: write.cc
exp/20230111-multi-cloud-parrallel/results/: log.txt  out.csv  out.ods  output.txt  process.py
exp/20230111-multi-cloud-parrallel/script/: randomization.py  read.sh  write.sh
figures/: multi-nodes.ods
figures/ant-exp/: ant-auto.eps  ant-frame.eps  data.csv  plot-auto.R  plot-frame.R
figures/bert-exp/: bert-1.eps  bert-10.eps  bert-5.eps  data.csv  data.ods  plot-no-hslambda.R  plot.R
lambda/: lambda_filter.py
lambda/aws/: lambda_filter.py
lambda/azure/: function_app.py
lambda/gcp/: main.py
micro_profiling/bandwidth/: bandwidth_estimator.py  sample_out.txt
micro_profiling/latency/: latency_estimator.py  query_log.py  requirements.txt
(+308 files in other folders)
